fix sim title dropdown z-index and move iterations above sidebar actions

--- a/ui/scss/core/components/_sim_title_dropdown.scss
+++ b/ui/scss/core/components/_sim_title_dropdown.scss
@@ -15,6 +15,7 @@ $icon-size: 48px;
 
   .dropdown-menu {
     background: $body-bg;
+    z-index: 1500;
 
     .dropdown-menu {
       min-width: 300px;
